<resources>

    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="expire_date">expire date</string>
    <string name="ipin">IPIN</string>
    <string name="error">Error</string>
    <string name="amount">Amount</string>
    <string name="responsestatus">Response Status</string>
    <string name="qr_purchase">Purchase</string>
    <string name="pan_error">card number between 16 to 19 digits</string>
    <string name="to_pan_error">To card number between 16 to 19 digits</string>
    <string name="expire_error">choose pan expire date</string>
    <string name="ipin_erro">ipin 4 digits</string>
    <string name="amount_error">enter valid amount</string>
    <string name="server_error">Connection with server is Failed</string>
    <string name="went_error">Somethings Went Wrong</string>
    <string name="successfully">Successfully</string>
    <string name="service_name">Service type</string>
    <string name="exit">Exit</string>
    <string name="share">Share</string>
    <string name="response_code">Response code</string>
    <string name="currency">%.2f SDG</string>
    <string name="fees">Fees</string>
    <string name="from_card">From card</string>
    <string name="to_card">To card</string>
    <string name="card_transfer">Card Transfer</string>
    <string name="date_time">Date &amp; Time</string>
    <string name="application_name">Application name</string>
</resources>