<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CardTransferActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="71dp"
            android:layout_height="71dp"
            android:layout_gravity="center"
            android:layout_marginEnd="11dp"
            android:layout_marginRight="11dp"
            android:layout_marginBottom="31dp"
            app:srcCompat="@drawable/rita_pay_logo" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/textview_background"
                android:gravity="center_horizontal"
                android:padding="7dp"
                android:text="@string/amount"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txt_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/textview_background"
                android:gravity="center_horizontal"
                android:padding="7dp"
                android:textAlignment="center"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/textview_background"
                android:gravity="center_horizontal"
                android:padding="7dp"
                android:text="@string/application_name"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/to_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/textview_background"
                android:gravity="center_horizontal"
                android:padding="7dp"
                android:textAlignment="center"
                android:textDirection="ltr"
                android:textStyle="bold" />

        </LinearLayout>


        <EditText

            android:id="@+id/editText_from_pan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/from_card"
            android:inputType="number"
            android:maxLength="19"
            android:maxLines="1"
            android:padding="@dimen/edittext_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/editText_expire_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/expire_date"
            android:inputType="none"
            android:padding="@dimen/edittext_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />


        <EditText
            android:id="@+id/editText_ipin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/ipin"
            android:inputType="numberPassword"
            android:maxLength="4"
            android:maxLines="1"
            android:padding="@dimen/edittext_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_expire_date" />


        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_amount" />

    </LinearLayout>


</LinearLayout>