<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CardTransferResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_marginTop="11dp"
        android:orientation="vertical">


        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginEnd="11dp"
            android:layout_marginRight="11dp"
            app:srcCompat="@drawable/rita_pay_logo" />


        <ImageView
            android:layout_width="71dp"
            android:layout_height="71dp"
            android:layout_gravity="center"
            android:layout_marginTop="11dp"
            app:srcCompat="@drawable/ic_done_circle" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/successfully"
            android:textColor="#0ada7c"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="start"
                    android:padding="7dp"
                    android:text="@string/service_name"
                    android:textAlignment="textStart"
                    android:textStyle="bold" />

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/textview_background_done"
                    android:gravity="center"
                    android:padding="7dp"
                    android:text="@string/qr_purchase"
                    android:textAlignment="center"
                    android:textStyle="bold" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="start"
                    android:padding="7dp"
                    android:text="@string/date_time"
                    android:textAlignment="textStart"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/date_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/textview_background_done"
                    android:gravity="center"
                    android:padding="7dp"
                    android:textAlignment="center" />

            </LinearLayout>


            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="start"
                    android:padding="7dp"
                    android:text="@string/from_card"
                    android:textAlignment="textStart"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_response_pan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/textview_background_done"
                    android:gravity="center_horizontal"
                    android:padding="7dp"
                    android:textAlignment="center"
                    android:textSize="12sp" />

            </LinearLayout>


          <!--  <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="start"
                    android:padding="7dp"
                    android:text="@string/to_card"
                    android:textAlignment="textStart"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/to_card"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/textview_background_done"
                    android:gravity="center_horizontal"
                    android:padding="7dp"
                    android:textAlignment="center"
                    android:textSize="12sp" />

            </LinearLayout>-->

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="start"
                    android:padding="7dp"
                    android:text="@string/amount"
                    android:textAlignment="textStart"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_response_amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/textview_background_done"
                    android:gravity="center_horizontal"
                    android:padding="7dp"
                    android:textAlignment="center"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="start"
                    android:padding="7dp"
                    android:text="@string/fees"
                    android:textAlignment="textStart"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_response_fee"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/textview_background_done"
                    android:gravity="center_horizontal"
                    android:padding="7dp"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="start"
                    android:padding="7dp"
                    android:text="@string/response_code"
                    android:textAlignment="textStart"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_response_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/textview_background_done"
                    android:gravity="center_horizontal"
                    android:padding="7dp"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="start"
                    android:padding="7dp"
                    android:text="@string/responsestatus"
                    android:textAlignment="textStart"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_response_msg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/textview_background_done"
                    android:gravity="center_horizontal"
                    android:padding="7dp"
                    android:textAlignment="center" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="7dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="7dp">

            <Button
                android:id="@+id/dialog_button_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="7dp"
                android:background="@drawable/button_background_done"
                android:gravity="center"
                android:padding="7dp"
                android:text="@string/share"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/dialog_button_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="7dp"
                android:background="@drawable/button_reounded"
                android:gravity="center"
                android:padding="7dp"
                android:text="@string/exit"
                android:textAllCaps="false"
                android:textColor="#fff" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>